Added comments and reordered tests in TestFilmService.java